// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCAssessment Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "triggers": "mock-triggers",
    },
    "questionType": "mock-question-type",
  },
  "key": "mockKey",
  "nodes": Array [
    undefined,
    undefined,
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`MCAssessment Converter slateToObo converts a Slate node to an OboNode 1`] = `
Object {
  "children": Array [
    undefined,
  ],
  "content": Object {
    "responseType": "pick-one",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`MCAssessment Converter slateToObo converts a Slate node to an OboNode with no content 1`] = `
Object {
  "children": Array [
    undefined,
  ],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`MCAssessment Converter slateToObo converts a Slate node to an OboNode with two correct 1`] = `
Object {
  "children": Array [
    undefined,
    undefined,
    undefined,
  ],
  "content": Object {
    "responseType": "pick-one-multiple-correct",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
